# cmake-install-tutorial-R

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
